Fixed fetching data error and updated categoryIDs

--- a/podCapsule/Scenes/Home/View/CollectionViewCells/PodcastCell.xib
+++ b/podCapsule/Scenes/Home/View/CollectionViewCells/PodcastCell.xib
@@ -35,7 +35,7 @@
                                     <constraint firstAttribute="bottom" secondItem="BjT-mB-cr9" secondAttribute="bottom" id="yTt-an-Vgj"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pjd-Dq-Gri">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="pjd-Dq-Gri">
                                 <rect key="frame" x="15" y="285" width="364" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Cv0-Td-srF"/>
