--- a/podCapsule/Scenes/Home/View/CollectionViewCells/RecentlyPlayedCell.xib
+++ b/podCapsule/Scenes/Home/View/CollectionViewCells/RecentlyPlayedCell.xib
@@ -11,33 +11,50 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RecentlyPlayedCell" id="gTV-IL-0wX" customClass="RecentlyPlayedCell" customModule="podCapsule" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="364" height="117"/>
+            <rect key="frame" x="0.0" y="0.0" width="463" height="105"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="364" height="117"/>
+                <rect key="frame" x="0.0" y="0.0" width="463" height="105"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uKO-C6-YNK">
-                        <rect key="frame" x="0.0" y="0.0" width="364" height="117"/>
+                        <rect key="frame" x="0.0" y="0.0" width="463" height="105"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1661872754162" translatesAutoresizingMaskIntoConstraints="NO" id="Tck-V1-eZ8">
-                                <rect key="frame" x="10" y="5" width="100" height="107"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RPM-WI-b2M">
+                                <rect key="frame" x="15" y="5" width="100" height="95"/>
+                                <subviews>
+                                    <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EP" translatesAutoresizingMaskIntoConstraints="NO" id="Tck-V1-eZ8">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="95"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="Rwm-dg-SED"/>
+                                    <constraint firstAttribute="width" constant="100" id="Bt3-tY-X3w"/>
+                                    <constraint firstAttribute="trailing" secondItem="Tck-V1-eZ8" secondAttribute="trailing" id="ZOp-tI-tVZ"/>
+                                    <constraint firstItem="Tck-V1-eZ8" firstAttribute="leading" secondItem="RPM-WI-b2M" secondAttribute="leading" id="bEj-81-8jf"/>
+                                    <constraint firstAttribute="bottom" secondItem="Tck-V1-eZ8" secondAttribute="bottom" id="j0N-EZ-9Bj"/>
+                                    <constraint firstItem="Tck-V1-eZ8" firstAttribute="top" secondItem="RPM-WI-b2M" secondAttribute="top" id="nlB-FS-Khm"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Back issue With treasy edison-Episode 134" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JzW-yT-URI">
-                                <rect key="frame" x="130" y="10" width="224" height="55"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Back issue With treasy edison-Episode 134" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JzW-yT-URI">
+                                <rect key="frame" x="130" y="10" width="323" height="41"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="55" id="dj8-Jd-3l5"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="55" id="dj8-Jd-3l5"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <color key="textColor" red="0.038345467299999998" green="0.17411926389999999" blue="0.2161790133" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="pb2-EO-FDp">
-                                <rect key="frame" x="128" y="77" width="20" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17 min remaining" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjL-19-eP7">
+                                <rect key="frame" x="154" y="73.5" width="296" height="19.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="0.0" height="0.0"/>
+                            </label>
+                            <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="pb2-EO-FDp">
+                                <rect key="frame" x="130" y="75" width="20" height="16"/>
                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="bw6-LY-nKR"/>
@@ -45,27 +62,20 @@
                                 </constraints>
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="19" scale="small" weight="semibold"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17 min remaining" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjL-19-eP7">
-                                <rect key="frame" x="153" y="75" width="186" height="19.5"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
-                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                                <size key="shadowOffset" width="0.0" height="0.0"/>
-                            </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="JzW-yT-URI" secondAttribute="trailing" constant="10" id="5Bv-x6-dd2"/>
-                            <constraint firstItem="Tck-V1-eZ8" firstAttribute="leading" secondItem="uKO-C6-YNK" secondAttribute="leading" constant="10" id="8D9-q9-whb"/>
-                            <constraint firstItem="JzW-yT-URI" firstAttribute="top" secondItem="uKO-C6-YNK" secondAttribute="top" constant="10" id="GTr-21-uI8"/>
-                            <constraint firstItem="pb2-EO-FDp" firstAttribute="top" secondItem="JzW-yT-URI" secondAttribute="bottom" constant="10" id="KIi-l2-ZcT"/>
-                            <constraint firstItem="bjL-19-eP7" firstAttribute="leading" secondItem="pb2-EO-FDp" secondAttribute="trailing" constant="5" id="Mup-ev-fmG"/>
-                            <constraint firstAttribute="bottom" secondItem="Tck-V1-eZ8" secondAttribute="bottom" constant="5" id="NMH-Mi-n79"/>
-                            <constraint firstItem="Tck-V1-eZ8" firstAttribute="top" secondItem="uKO-C6-YNK" secondAttribute="top" constant="5" id="Saq-k2-0KS"/>
-                            <constraint firstAttribute="trailing" secondItem="bjL-19-eP7" secondAttribute="trailing" constant="25" id="Ukt-UU-kgI"/>
-                            <constraint firstItem="pb2-EO-FDp" firstAttribute="leading" secondItem="Tck-V1-eZ8" secondAttribute="trailing" constant="18" id="Uot-HB-WQf"/>
-                            <constraint firstItem="bjL-19-eP7" firstAttribute="top" secondItem="JzW-yT-URI" secondAttribute="bottom" constant="10" id="fUH-Bp-fha"/>
-                            <constraint firstItem="JzW-yT-URI" firstAttribute="leading" secondItem="Tck-V1-eZ8" secondAttribute="trailing" constant="20" id="zed-v2-ALo"/>
+                            <constraint firstAttribute="bottom" secondItem="pb2-EO-FDp" secondAttribute="bottom" constant="12" id="00W-Ez-yCM"/>
+                            <constraint firstAttribute="trailing" secondItem="JzW-yT-URI" secondAttribute="trailing" constant="10" id="1Dk-oq-BZl"/>
+                            <constraint firstItem="RPM-WI-b2M" firstAttribute="leading" secondItem="uKO-C6-YNK" secondAttribute="leading" constant="15" id="GMD-aM-NVn"/>
+                            <constraint firstAttribute="bottom" secondItem="bjL-19-eP7" secondAttribute="bottom" constant="12" id="T88-jO-C6U"/>
+                            <constraint firstItem="RPM-WI-b2M" firstAttribute="top" secondItem="uKO-C6-YNK" secondAttribute="top" constant="5" id="VEv-Wg-yNa"/>
+                            <constraint firstItem="JzW-yT-URI" firstAttribute="leading" secondItem="Tck-V1-eZ8" secondAttribute="trailing" constant="15" id="WBM-f8-RMa"/>
+                            <constraint firstItem="JzW-yT-URI" firstAttribute="top" secondItem="uKO-C6-YNK" secondAttribute="top" constant="10" id="Z14-Z6-EeZ"/>
+                            <constraint firstItem="bjL-19-eP7" firstAttribute="leading" secondItem="pb2-EO-FDp" secondAttribute="trailing" constant="4" id="Zlb-FW-oNl"/>
+                            <constraint firstAttribute="trailing" secondItem="bjL-19-eP7" secondAttribute="trailing" constant="13" id="k5q-r6-tOY"/>
+                            <constraint firstAttribute="bottom" secondItem="RPM-WI-b2M" secondAttribute="bottom" constant="5" id="rRX-Ta-uBX"/>
+                            <constraint firstItem="pb2-EO-FDp" firstAttribute="leading" secondItem="Tck-V1-eZ8" secondAttribute="trailing" constant="15" id="zl7-2u-liq"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -77,17 +87,18 @@
                 <constraint firstAttribute="bottom" secondItem="uKO-C6-YNK" secondAttribute="bottom" id="lS4-IS-HJk"/>
                 <constraint firstAttribute="trailing" secondItem="uKO-C6-YNK" secondAttribute="trailing" id="vVQ-Kb-DvB"/>
             </constraints>
-            <size key="customSize" width="364" height="117"/>
+            <size key="customSize" width="463" height="105"/>
             <connections>
-                <outlet property="nameLabel" destination="JzW-yT-URI" id="pIT-Z8-J0O"/>
                 <outlet property="posterImageView" destination="Tck-V1-eZ8" id="SuQ-h3-IRT"/>
+                <outlet property="posterShadowView" destination="RPM-WI-b2M" id="csB-8A-Vb7"/>
                 <outlet property="remainingTimeLabel" destination="bjL-19-eP7" id="oTG-sF-nfL"/>
+                <outlet property="titleLabel" destination="JzW-yT-URI" id="pIT-Z8-J0O"/>
             </connections>
-            <point key="canvasLocation" x="-11.594202898550726" y="17.075892857142858"/>
+            <point key="canvasLocation" x="60.14492753623189" y="13.058035714285714"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="1661872754162" width="1321" height="1450"/>
+        <image name="EP" width="500" height="500"/>
         <image name="clock" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
