--- a/podCapsule/Scenes/Home/View/CollectionViewCells/RecentlyPlayedCell.xib
+++ b/podCapsule/Scenes/Home/View/CollectionViewCells/RecentlyPlayedCell.xib
@@ -11,26 +11,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RecentlyPlayedCell" id="gTV-IL-0wX" customClass="RecentlyPlayedCell" customModule="podCapsule" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="463" height="105"/>
+            <rect key="frame" x="0.0" y="0.0" width="439" height="96"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="463" height="105"/>
+                <rect key="frame" x="0.0" y="0.0" width="439" height="96"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uKO-C6-YNK">
-                        <rect key="frame" x="0.0" y="0.0" width="463" height="105"/>
+                        <rect key="frame" x="0.0" y="0.0" width="439" height="96"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RPM-WI-b2M">
-                                <rect key="frame" x="15" y="5" width="100" height="95"/>
+                                <rect key="frame" x="15" y="5" width="85" height="86"/>
                                 <subviews>
                                     <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EP" translatesAutoresizingMaskIntoConstraints="NO" id="Tck-V1-eZ8">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="95"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="85" height="86"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="Bt3-tY-X3w"/>
+                                    <constraint firstAttribute="width" constant="85" id="Bt3-tY-X3w"/>
                                     <constraint firstAttribute="trailing" secondItem="Tck-V1-eZ8" secondAttribute="trailing" id="ZOp-tI-tVZ"/>
                                     <constraint firstItem="Tck-V1-eZ8" firstAttribute="leading" secondItem="RPM-WI-b2M" secondAttribute="leading" id="bEj-81-8jf"/>
                                     <constraint firstAttribute="bottom" secondItem="Tck-V1-eZ8" secondAttribute="bottom" id="j0N-EZ-9Bj"/>
@@ -38,23 +38,23 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Back issue With treasy edison-Episode 134" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JzW-yT-URI">
-                                <rect key="frame" x="130" y="10" width="323" height="41"/>
+                                <rect key="frame" x="115" y="10" width="314" height="45"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="55" id="dj8-Jd-3l5"/>
+                                    <constraint firstAttribute="height" constant="45" id="dj8-Jd-3l5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <color key="textColor" red="0.038345467299999998" green="0.17411926389999999" blue="0.2161790133" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17 min remaining" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjL-19-eP7">
-                                <rect key="frame" x="154" y="73.5" width="296" height="19.5"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                <rect key="frame" x="139" y="62" width="287" height="24"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                                 <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
                             <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="pb2-EO-FDp">
-                                <rect key="frame" x="130" y="75" width="20" height="16"/>
+                                <rect key="frame" x="115" y="68" width="20" height="16"/>
                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="bw6-LY-nKR"/>
@@ -65,15 +65,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="pb2-EO-FDp" secondAttribute="bottom" constant="12" id="00W-Ez-yCM"/>
+                            <constraint firstAttribute="bottom" secondItem="pb2-EO-FDp" secondAttribute="bottom" constant="10" id="00W-Ez-yCM"/>
                             <constraint firstAttribute="trailing" secondItem="JzW-yT-URI" secondAttribute="trailing" constant="10" id="1Dk-oq-BZl"/>
                             <constraint firstItem="RPM-WI-b2M" firstAttribute="leading" secondItem="uKO-C6-YNK" secondAttribute="leading" constant="15" id="GMD-aM-NVn"/>
-                            <constraint firstAttribute="bottom" secondItem="bjL-19-eP7" secondAttribute="bottom" constant="12" id="T88-jO-C6U"/>
+                            <constraint firstAttribute="bottom" secondItem="bjL-19-eP7" secondAttribute="bottom" constant="10" id="T88-jO-C6U"/>
                             <constraint firstItem="RPM-WI-b2M" firstAttribute="top" secondItem="uKO-C6-YNK" secondAttribute="top" constant="5" id="VEv-Wg-yNa"/>
                             <constraint firstItem="JzW-yT-URI" firstAttribute="leading" secondItem="Tck-V1-eZ8" secondAttribute="trailing" constant="15" id="WBM-f8-RMa"/>
                             <constraint firstItem="JzW-yT-URI" firstAttribute="top" secondItem="uKO-C6-YNK" secondAttribute="top" constant="10" id="Z14-Z6-EeZ"/>
                             <constraint firstItem="bjL-19-eP7" firstAttribute="leading" secondItem="pb2-EO-FDp" secondAttribute="trailing" constant="4" id="Zlb-FW-oNl"/>
                             <constraint firstAttribute="trailing" secondItem="bjL-19-eP7" secondAttribute="trailing" constant="13" id="k5q-r6-tOY"/>
+                            <constraint firstItem="bjL-19-eP7" firstAttribute="top" secondItem="JzW-yT-URI" secondAttribute="bottom" constant="7" id="pL0-xH-zyc"/>
                             <constraint firstAttribute="bottom" secondItem="RPM-WI-b2M" secondAttribute="bottom" constant="5" id="rRX-Ta-uBX"/>
                             <constraint firstItem="pb2-EO-FDp" firstAttribute="leading" secondItem="Tck-V1-eZ8" secondAttribute="trailing" constant="15" id="zl7-2u-liq"/>
                         </constraints>
@@ -87,14 +88,14 @@
                 <constraint firstAttribute="bottom" secondItem="uKO-C6-YNK" secondAttribute="bottom" id="lS4-IS-HJk"/>
                 <constraint firstAttribute="trailing" secondItem="uKO-C6-YNK" secondAttribute="trailing" id="vVQ-Kb-DvB"/>
             </constraints>
-            <size key="customSize" width="463" height="105"/>
+            <size key="customSize" width="439" height="96"/>
             <connections>
                 <outlet property="posterImageView" destination="Tck-V1-eZ8" id="SuQ-h3-IRT"/>
                 <outlet property="posterShadowView" destination="RPM-WI-b2M" id="csB-8A-Vb7"/>
                 <outlet property="remainingTimeLabel" destination="bjL-19-eP7" id="oTG-sF-nfL"/>
                 <outlet property="titleLabel" destination="JzW-yT-URI" id="pIT-Z8-J0O"/>
             </connections>
-            <point key="canvasLocation" x="60.14492753623189" y="13.058035714285714"/>
+            <point key="canvasLocation" x="42.753623188405797" y="10.044642857142856"/>
         </collectionViewCell>
     </objects>
     <resources>
